--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>BugMeNot</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="loading"><img src="img/loading.svg" /></div>
+    <div class="loading"><img src="assets/img/loading.svg" /></div>
+    <header>
+        <img src="assets/img/logo.png">
+        <div class="add">+</div>
+    </header>
     <div class="wrapper"></div>
 </body>
-<script src="libs/jquery-3.3.1.min.js"></script>
-<script src="js/app.js"></script>
+<script src="assets/libs/jquery-3.3.1.min.js"></script>
+<script src="assets/js/app.js"></script>
 </html>
